Add update and delete endpoints